# vokzal

./: .gitignore  .golangci.yml  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  NOTICE  PROGRESS.html  QUICKSTART.md  README.html  README.md  biome.json  hashmap.json  index.html  start-admin.ps1  start-services.ps1  test-bcrypt.go
.github/: .gitignore  CI_CD.md
api/: README.html
architecture/: README.html
assets/: PROGRESS.md.CNRUqFF0.js  PROGRESS.md.CNRUqFF0.lean.js  README.md.Dt_45ovN.js  README.md.Dt_45ovN.lean.js  api_README.md.qRhAG68W.js  api_README.md.qRhAG68W.lean.js  app.C6ZyZ7mc.js  architecture_README.md.C0DwxDTl.js  architecture_README.md.C0DwxDTl.lean.js  branding_BRAND_GUIDELINES.md.w_nZezhT.js  branding_BRAND_GUIDELINES.md.w_nZezhT.lean.js  index.md.JM4qOpYj.js  index.md.JM4qOpYj.lean.js  initial_00.md.BVm-Ydqt.js  initial_00.md.BVm-Ydqt.lean.js  initial_01.md.BLDDhvIT.js  initial_01.md.BLDDhvIT.lean.js  initial_02.md.DuNn71zA.js  initial_02.md.DuNn71zA.lean.js  initial_03.md.CxA6fvXu.js  initial_03.md.CxA6fvXu.lean.js  initial_04.md.BPQbkdPv.js  initial_04.md.BPQbkdPv.lean.js  initial_05.md.C1MUh0UQ.js  initial_05.md.C1MUh0UQ.lean.js  initial_06.md.D9sEtGZC.js  initial_06.md.D9sEtGZC.lean.js  initial_07.md.XvU83sMB.js  initial_07.md.XvU83sMB.lean.js  initial_08.md.CfETZE74.js  initial_08.md.CfETZE74.lean.js  initial_09.md.DO2a3e1i.js  initial_09.md.DO2a3e1i.lean.js  initial_10.md.BuO81OEo.js  (+34 more)
ui/pos-app/src-tauri/: Cargo.toml  tauri.conf.json
ui/pos-app/src-tauri/src/: main.rs
(+397 files in other folders)
